--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,7 @@ $RECYCLE.BIN/
 # Logs and databases
 ############################
 
-#.tmp
+.tmp
 *.log
 *.sql
 *.sqlite
@@ -112,4 +112,4 @@ exports
 *.cache
 build
 .strapi-updater.json
-package-lock.json
+#package-lock.json
